[project]
name = "hsl_ur5"
version = "0.1.0"
dependencies = [
    "ur_rtde",
    "torch",
    "numpy",
    "pillow",
    "opencv-python",
    "einops",
    "requests",
    "matplotlib",
    "pygame",
    "robotiq_gripper_python @ git+https://github.com/ian-chuang/robotiq_gripper_python.git",
    "ati_axia80_ethernet_python @ git+https://github.com/ian-chuang/ati_axia80_ethernet_python.git"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
